--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=SistemaEscolar
+# GENERAL
+
+server.port=8080
+#DATABASE
+spring.datasource.url=jdbc:mysql://localhost/sistema_escolar?useSSL=false
+spring.datasource.dbname=sistema_escolar
+spring.datasource.username=root
+spring.datasource.password=root123
+Spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+security.jwt.secret=YOUR_SECRET_KEY
+security.jwt.issuer=YOUR_ISSUER 
+#La sesion dura una semana
+security.jwt.ttlMillis=604800000 
+
+
