Modificaciones leves a application.properties y Funcion de prueba
-Se creo una funcion en SistemaEscolarApplication.java para probar que las Entities funcionaran correctamente
-Modificaciones leves en application.properties relacionadas a hibernate
y comentando las propiedades de jwt por que aun no se utilizan
-Se cambio el tipo de dato a LocalDate tanto en Asistencia.java, como en
Actividad.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,16 @@ spring.datasource.url=jdbc:mysql://localhost/sistema_escolar?useSSL=false
 spring.datasource.dbname=sistema_escolar
 spring.datasource.username=root
 spring.datasource.password=root123
-Spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-security.jwt.secret=YOUR_SECRET_KEY
-security.jwt.issuer=YOUR_ISSUER 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#JWT
+# security.jwt.secret=YOUR_SECRET_KEY
+# security.jwt.issuer=YOUR_ISSUER 
 #La sesion dura una semana
-security.jwt.ttlMillis=604800000 
+# security.jwt.ttlMillis=604800000 
 
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.hibernate.ddl-auto=update
 
