--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,21 @@
-spring.application.name=SistemaEscolar
 # GENERAL
-
 server.port=8080
+spring.application.name=SistemaEscolar
+server.servlet.context-path=/api/v1
+
 #DATABASE
 spring.datasource.url=jdbc:mysql://localhost/sistema_escolar?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 #JWT
 # security.jwt.secret=YOUR_SECRET_KEY
 # security.jwt.issuer=YOUR_ISSUER 
 #La sesion dura una semana
 # security.jwt.ttlMillis=604800000 
 
+#Configuracion de Hibernate
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
