Autentificacion con JWT y Hash
-Se creo la carpeta de Utils
-Se agrego la clase JWTUtil.java a la carpeta Utils
-Se creo un nuevo controlador con la logica de login en AuthController.java
-Se modifico el ENDPOINT agregarProfesor en ProfesorController.java para
que se hashee la contrasenia una vez que se cree.
-Se descomentaron lineas en el application.properties para JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,10 @@ spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JWT
-# security.jwt.secret=YOUR_SECRET_KEY
-# security.jwt.issuer=YOUR_ISSUER 
-#La sesion dura una semana
-# security.jwt.ttlMillis=604800000 
+security.jwt.secret=YOUR_SECRET_KEY
+security.jwt.issuer=YOUR_ISSUER 
+# La sesion dura una semana
+security.jwt.ttlMillis=604800000 
 
 #Configuracion de Hibernate
 spring.jpa.show-sql=true
